--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
 body {
-    color:brown;
+    background-color:rgb(230, 155, 155);
+}
+
+p{
+    color:black;
+    font-family:'Courier New', Courier, monospace;
+    font-size:20px;
 }
